--- a/index.html
+++ b/index.html
@@ -6,21 +6,30 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>các địa danh nổi tiếng ở quảng nam và thông tin hữu ích của chúng</h1>
-    <ol>
-      <li>HỒ PHÚ NINH</li>
-      <a href=""></a>
-      <li>PHỐ CỔ HỘI AN</li>
-      <li>THÁNH ĐỊA MỸ SƠN</li>
-    </ol>
-    <h2>
-      <p>cách đường link về hướng dẫn cũng như sự hiểu biết về địa điểm đó</p>
-    </h2>
-    <p><a href="../HỒ PHÚ NINH/index.html">hồ phú ninh </a></p>
-    <p>
-      <a href="../PHỐ CỔ HỘI AN/index.html">phố cổ hội an </a>
-    </p>
-    <p><a href="../THÁNH ĐỊA MỸ SƠN/index.html">thánh địa mỹ sơn </a></p>
+    <a href="../HỒ PHÚ NINH/index.html">hồ phú ninh </a>
+
+    <a href="../PHỐ CỔ HỘI AN/index.html">phố cổ hội an </a>
+    <a href="../THÁNH ĐỊA MỸ SƠN/index.html">thánh địa mỹ sơn </a>
     <a href="../index.html">HOME </a>
+
+    <h1>các nơi để check in cho các chị em các thông tin về địa điểm</h1>
+    <h2>cây cô đơn</h2>
+    <ol type="I">
+      <li>địa điểm : xã tam dân huyện phú ninh tỉnh quảng nam</li>
+      <li>số lượng du khách đi và đến > 5000 khách</li>
+      <li>số mực nước dân trong ngày: 2 lần trong ngày</li>
+      <li>
+        là vị trí đẹp cho các chị em đến nghỉ ngơi, ăn nhậu cũng như check in
+      </li>
+      <li>
+        Người dân ở địa phương này đặt cho địa điểm trên là cây cô đơn giữa ốc
+        đảo
+      </li>
+      <li>
+        Thời khắc cây cô đơn đẹp nhất có lẽ là lúc bình minh hay hoàng hôn.
+        Nhiều bạn trẻ ở xứ Quảng đổ xô đến cây cô đơn để check-in, ghi lại
+        khoảnh khắc hoàng hôn đổ xuống hồ Phú Ninh bên cạnh cây cô đơn.
+      </li>
+    </ol>
   </body>
 </html>
